policygenerator/policy-sets/community/kyverno/input/apps/require_deployments_have_multiple_replicas/deployment-musthaverolling-strategy.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: deployment-must-have-rolling-update
  annotations:
    policies.kyverno.io/title: Require Multiple Replicas
    policies.kyverno.io/category: Sample
    policies.kyverno.io/severity: medium
    policies.kyverno.io/subject: Deployment
    policies.kyverno.io/description: >-
      Deployments with a single replica cannot be highly available and thus the application
      may suffer downtime if that one replica goes down. This policy validates that Deployments
      have more than one replica.
spec:
  validationFailureAction: audit
  background: true
  rules:
    - name: deployment-has-rolling-update
      match:
        resources:
          kinds:
          - Deployment
          namespaces:
          - kyverno-demo
      validate:
        message: "Deployments should have RollingUpdate strategy"
        pattern:
          spec:
           strategy:
             type: RollingUpdate
             rollingUpdate:
             maxSurge: 1
             maxUnavailable: 0
